--- a/style.css
+++ b/style.css
@@ -123,4 +123,10 @@ body
     box-shadow: 1px 1px 2px white;
     background-color: transparent;
     padding: 5px;
+    transition: all 0.4s ease ;
+}
+.card:hover
+{
+    box-shadow: 2px 2px 5px white;
+    transform: scale(1.1);
 }
