--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body
 }
 .container
 {
+    position: relative;
     width: 100%;
     height: 90vh;
     display: flex;
@@ -64,14 +65,19 @@ body
 {
     display: none;
     position: absolute;
-    top: 100%;
-    left: 0;
+    width: 50%;
+    height: 200px;
+    top: 100px;
+    left:300px;
     margin-top: 8px;
-    padding: 8px 12px;
+    padding: 8px;
     background-color: #ff4d4d;
     color: white;
-    border-radius: 4px;
-    animation: fade 0.3s ease-in-out;
+    border-radius: 8px;
+    font-size: 1.2em;
+    text-align: center;
+    font-weight: 900;
+    line-height: 200px;
 }
 .location
 {
