--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body
     margin:100px auto ;
     background: rgba(86, 79, 79, 0.3);
     box-shadow: 2px 2px 5px white;
+    border-radius: 10px;
 }
 .search
 {
@@ -35,7 +36,7 @@ body
 }
 .search input
 {
-    width: 80%;
+    min-width: 50vw;
     height: 30px;
     border-radius: 10px;
     padding: 0 20px;
@@ -44,7 +45,6 @@ body
 }
 .search button
 {
-    width: 10%;
     height: 30px;
     border-radius: 10px;
     background-color: transparent;
@@ -52,6 +52,7 @@ body
     font-size: 18px;
     cursor: pointer;
     border: 1px solid white;
+    padding: 5px;
 }
 #btn
 {
@@ -107,7 +108,7 @@ body
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 .locationabout
 {
@@ -142,6 +143,8 @@ body
 .locationweather
 {
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
     height: 20vh;
     width: 100%;
     justify-content: space-around;
@@ -166,4 +169,30 @@ body
 {
     box-shadow: 2px 2px 5px white;
     transform: scale(1.1);
+}
+.fivecast
+{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 10px;
+    gap:10px;
+}
+
+.castcard
+{
+    width: 150px;
+    min-height: 100px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 1em;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 1px 1px 2px white;
+    background-color: transparent;
+    padding: 5px;
+    transition: all 0.4s ease ;
 }
