--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body
 {
     background: linear-gradient(to right, #032f4d, #6facef);
     width: 100vw;
-    height: 100%;
+    min-height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -27,8 +27,7 @@ body
 {
     position: relative;
     width: 90%;
-    height: auto;
-    min-height: 500px;
+    min-height: 90vh;
     display: flex;
     margin: 20px;
     gap: 20px;
@@ -191,7 +190,7 @@ body
 .fivecast
 {
     width: 100%;
-    height: 30vh;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -226,4 +225,44 @@ body
 {
     box-shadow: 2px 2px 5px white;
     transform: scale(1.1);
+}
+/* media query */
+@media screen and (max-width: 600px)
+{
+    .container
+    {
+        width: 100%;
+        min-height: 100vh;
+    }
+    .search input
+    {
+        width: 80%;
+    }
+    .locationdetail
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+    .locationabout
+    {
+        width: 100%;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 400px)
+{
+    .search input
+    {
+        width: 100%;
+    }
+    .locationdetail
+    {
+        flex-direction: column;
+        align-items: center;
+    }
+    .locationabout
+    {
+        width: 100%;
+        text-align: center;
+    }
 }
